k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-app
  labels:
    env: local-dev
    managed-by: jenkins-cicd
